添加扩展命令行管理
